--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
+<!-- **************************************IPHONE***************************************************** -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <figure>
@@ -458,11 +458,13 @@
             </div>
           </div>
 
+<!-- ************************************** SAMSUNG ***************************************************** -->
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Samsung Galaxy S21.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Samsung Galaxy S21.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -476,8 +478,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Samsung Galaxy S20.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Samsung Galaxy S20.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -491,8 +493,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Samsung Galaxy A52s.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Samsung Galaxy A52s.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -506,8 +508,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Samsung Galaxy A52s.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Samsung Galaxy A52s.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -521,8 +523,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-sam">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/card3.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/card3.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Samsung Galaxy A32.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Samsung Galaxy A32.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Card 3"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -533,11 +535,13 @@
             </div>
           </div>
 
+<!-- ************************************** XIAOMI ***************************************************** -->
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Xiaomi Redmi 10.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Xiaomi Redmi 10.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -551,8 +555,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Xiaomi Redmi Note 10.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Xiaomi Redmi Note 10.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -566,8 +570,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Xiaomi Redmi Note 11.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Xiaomi Redmi Note 11.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -581,8 +585,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Xiaomi Redmi Note 11 Pro.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Xiaomi Redmi Note 11 Pro.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
@@ -596,8 +600,8 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-xia">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/web1.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/web1.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
+                <img src="assets/img/portfolio/Xiaomi Redmi Note 8.jpg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/Xiaomi Redmi Note 8.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Web 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bi bi-link"></i></a>
               </figure>
 
